@@ -150,6 +150,37 @@
                           </object>
                         </child>
                         <child>
+                          <object class="GtkLabel" id="guest_mouse_label">
+                            <property name="visible">True</property>
+                            <property name="label" translatable="yes">&lt;b&gt;Guest Mouse&lt;/b&gt;</property>
+                            <property name="use_underline">False</property>
+                            <property name="use_markup">True</property>
+                            <property name="justify">GTK_JUSTIFY_LEFT</property>
+                            <property name="wrap">False</property>
+                            <property name="selectable">False</property>
+                            <property name="xalign">0</property>
+                            <property name="yalign">0</property>
+                            <property name="xpad">0</property>
+                            <property name="ypad">0</property>
+                            <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+                            <property name="width_chars">-1</property>
+                            <property name="single_line_mode">False</property>
+                            <property name="angle">0</property>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="GtkCheckButton" id="guest_mouse_off">
+                            <property name="visible">True</property>
+                            <property name="label" translatable="yes">Set _guest mouse off</property>
+                            <property name="use_underline">True</property>
+                          </object>
+                          <packing>
+                            <property name="padding">0</property>
+                            <property name="expand">False</property>
+                            <property name="fill">False</property>
+                          </packing>
+                        </child>
+                        <child>
                           <object class="GtkLabel" id="palm_detection_label">
                             <property name="visible">True</property>
                             <property name="label" translatable="yes">&lt;b&gt;Palm Detection&lt;/b&gt;</property>
