@@ -42,7 +42,7 @@ typedef enum {
     GPDS_TOUCHPAD_BUTTON_SCROLLING_REPEAT,
     GPDS_TOUCHPAD_SCROLLING_TIME,
     GPDS_TOUCHPAD_OFF,
-    GPDS_TOUCHPAD_GUESTMOUSE_OFF,
+    GPDS_TOUCHPAD_GUEST_MOUSE_OFF,
     GPDS_TOUCHPAD_LOCKED_DRAGS,
     GPDS_TOUCHPAD_LOCKED_DRAGS_TIMEOUT,
     GPDS_TOUCHPAD_TAP_ACTION,
